--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base{
+    @font-face {
+        font-family: "Dana" ;
+        src: url("../public/asset/fonts/Dana/woff2/DanaFaNum-Regular.woff2") format("woff2");
+        /* font-display: swap; */
+    }
+    @font-face {
+        font-family: "Dana Medium" ;
+        src: url("../public/asset/fonts/Dana/woff2/DanaFaNum-Medium.woff2") format("woff2");
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Dana DemiBold" ;
+        src: url("../public/asset/fonts/Dana/woff2/DanaFaNum-DemiBold.woff2") format("woff2");
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Morabba Light" ;
+        src: url("../public/asset/fonts/Morabba/woff2/Morabba-Light.woff2") format("woff2");
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Morabba Medium" ;
+        src: url("../public/asset/fonts/Morabba/woff2/Morabba-Medium.woff2") format("woff2");
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Morabba Bold" ;
+        src: url("../public/asset/fonts/Morabba/woff2/Morabba-Bold.woff2") format("woff2");
+        font-display: swap;
+    }
+}
 
 html::-webkit-scrollbar{
 	width: 6px;
@@ -101,3 +133,11 @@ ol, ul {
 }
 
 
+.link{
+    text-decoration: none;
+    color: inherit;
+  }
+  .link.active>li{
+    background-color: #d7ff68;
+    color: black;
+  }
