--- a/src/index.scss
+++ b/src/index.scss
@@ -1,66 +1,68 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base{
     @font-face {
         font-family: "Dana" ;
-        src: url("../public/asset/fonts/Dana/woff2/DanaFaNum-Regular.woff2") format("woff2");
+        src: url("../asset/fonts/Dana/woff2/DanaFaNum-Regular.woff2") format("woff2");
         /* font-display: swap; */
     }
     @font-face {
         font-family: "Dana Medium" ;
-        src: url("../public/asset/fonts/Dana/woff2/DanaFaNum-Medium.woff2") format("woff2");
+        src: url("../asset/fonts/Dana/woff2/DanaFaNum-Medium.woff2") format("woff2");
         font-display: swap;
     }
     @font-face {
         font-family: "Dana DemiBold" ;
-        src: url("../public/asset/fonts/Dana/woff2/DanaFaNum-DemiBold.woff2") format("woff2");
+        src: url("../asset/fonts/Dana/woff2/DanaFaNum-DemiBold.woff2") format("woff2");
         font-display: swap;
     }
     @font-face {
         font-family: "Morabba Light" ;
-        src: url("../public/asset/fonts/Morabba/woff2/Morabba-Light.woff2") format("woff2");
+        src: url("../asset/fonts/Morabba/woff2/Morabba-Light.woff2") format("woff2");
         font-display: swap;
     }
     @font-face {
         font-family: "Morabba Medium" ;
-        src: url("../public/asset/fonts/Morabba/woff2/Morabba-Medium.woff2") format("woff2");
+        src: url("../asset/fonts/Morabba/woff2/Morabba-Medium.woff2") format("woff2");
         font-display: swap;
     }
     @font-face {
         font-family: "Morabba Bold" ;
-        src: url("../public/asset/fonts/Morabba/woff2/Morabba-Bold.woff2") format("woff2");
+        src: url("../asset/fonts/Morabba/woff2/Morabba-Bold.woff2") format("woff2");
         font-display: swap;
     }
 }
-
-html::-webkit-scrollbar{
-	width: 6px;
-}
-html::-webkit-scrollbar-track{
-	background:#355d5e;
-}
-html::-webkit-scrollbar-thumb{
-	background:#020537;
-}
-html, body{
-	margin: 0;
-	padding: 0;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-img{
-    color: rgb(235, 52, 52) !important;
-    font-family: "Dana";
-    font-size: 12px;
-}
-option{
-    font-family: "Dana";
-    background: #000;
+@layer base{
+    html::-webkit-scrollbar{
+        width: 6px;
+    }
+    html::-webkit-scrollbar-track{
+        background:#355d5e;
+    }
+    html::-webkit-scrollbar-thumb{
+        background:#020537;
+    }
+    html, body{
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        line-height: 1;
+    }
+    ol, ul {
+        list-style: none;
+    }
+    img{
+        color: rgb(235, 52, 52) !important;
+        font-family: "Dana";
+        font-size: 12px;
+    }
+    option{
+        font-family: "Dana";
+        background: #000;
+    }
 }
 
 .toast-message{
@@ -170,7 +172,7 @@ tspan{
     background: #05cb01 !important;
     color: #fff !important;
     font-size:1.5rem;
-    font-family: monospace !important;
+    font-family: "Dana" !important;
     font-weight: 800;
     border: none !important;
     outline: none !important;
@@ -182,7 +184,7 @@ tspan{
     border: none !important;
     outline: none !important;
     font-weight: 800;
-    font-family: monospace !important;
+    font-family: "Dana" !important;
 }
 .swal2-container{
     background: #0a07cd37 !important;
@@ -204,4 +206,13 @@ tspan{
 .swal2-icon{
     background: rgb(3, 78, 29) !important;
     color: rgb(0, 255, 8) !important;
+}
+.swal2-input-label{
+    color: rgb(255, 242, 0) !important;
+    margin-top: 25px;
+    font-family:"Morabba Bold" !important ;
+}
+.swal2-input{
+    color: rgb(255, 242, 0) !important;
+    font-family: "Dana" !important;
 }
