--- a/src/index.scss
+++ b/src/index.scss
@@ -165,8 +165,14 @@ tspan{
 // -------------- SWAL -------------------//
 .swal2-title{
     color: rgb(0, 148, 42) !important;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: "Morabba Bold" !important; 
+}
+.swal2-html-container{
+    color: rgb(248, 248, 49) !important;
+    font-size: 1.5rem;
+    font-family: "Dana" !important; 
+    
 }
 .swal2-confirm{
     background: #05cb01 !important;
