change Schema for Users

--- a/src/index.scss
+++ b/src/index.scss
@@ -100,7 +100,7 @@
 }
 .MuiTablePagination-selectLabel{
 	color: #d7ff68 !important;
-    // display: none !important;
+    display: none !important;
 	
 }
 .MuiSelect-select{
